--- a/src/app/leyenda/leyenda.component.html
+++ b/src/app/leyenda/leyenda.component.html
@@ -1,27 +1,26 @@
-<h3  mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle
->{{ data.title }} </h3>
-<mat-dialog-content   >
+<h3 mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>{{ data.title }} </h3>
+<mat-dialog-content>
 
-  
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="AR" readonly="true"><b>Area</b>
-  <br>
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="PR" readonly="true"><b>Proceso</b> 
-  <br>
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="SP" readonly="true"> <b>Subproceso</b>
-  <br>
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="AC" readonly="true"> <b>Actividad</b>
-  <br>
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="TA" readonly="true"> <b>Tarea</b>
-  <br>
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="DM" readonly="true"> <b>Dimension</b>
-  <br>
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="RG" readonly="true"> <b>Riesgo</b>
-  <br>
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="CS" readonly="true"> <b>Consecuencia</b>
-  <br>
-  <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="CT" readonly="true"> <b>Control</b>
-  <br>
-  <!-- <input class='boton' style="background-color:#ffc107 ;"  type="text" placeholder="" readonly="true"><b>Creacion,Validacion,Inactivacion,Eliminacion</b>
+
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="AR" readonly="true"><b>Area</b>
+    <br>
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="PR" readonly="true"><b>Proceso</b>
+    <br>
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="SP" readonly="true"> <b>Subproceso</b>
+    <br>
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="AC" readonly="true"> <b>Actividad</b>
+    <br>
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="TA" readonly="true"> <b>Tarea</b>
+    <br>
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="DM" readonly="true"> <b>Dimension</b>
+    <br>
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="RG" readonly="true"> <b>Riesgo</b>
+    <br>
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="CS" readonly="true"> <b>Consecuencia</b>
+    <br>
+    <input class='boton' type="text" style="background-color: #bdf987e6; " placeholder="CT" readonly="true"> <b>Control</b>
+    <br>
+    <!-- <input class='boton' style="background-color:#ffc107 ;"  type="text" placeholder="" readonly="true"><b>Creacion,Validacion,Inactivacion,Eliminacion</b>
   <br>
     <input class='boton' style="background-color:#EF5350 ;"  type="text" placeholder="" readonly="true"> <b>Pendientes por Validar.</b>
     <br>
@@ -30,13 +29,11 @@
     <input class='boton'  style="background-color:#66BB6A ;" type="text" placeholder="" readonly="true"><b>Validado</b>
      <br>
    <input class='boton'  style="background-color:black ;  " type="text" placeholder="" readonly="true"> <b>Aprobado</b>  -->
-    
- 
+
+
 </mat-dialog-content>
 <br>
-<mat-dialog-actions>        
-  <button mat-raised-button color="warn"  (click)="cerrar()">{{ data.button_close }}</button>
-  
-</mat-dialog-actions>
-  
+<mat-dialog-actions>
+    <button mat-raised-button color="warn" (click)="cerrar()">{{ data.button_close }}</button>
 
+</mat-dialog-actions>
