--- a/src/app/componentes/rkmain/rkp/rkp.component.html
+++ b/src/app/componentes/rkmain/rkp/rkp.component.html
@@ -1,4 +1,8 @@
-<h6 class="article-title">Area > Proceso</h6>
+<h6 class="article-title">
+    Area > Proceso
+    <button *ngIf="procesoModel.procesoStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(procesoModel.key,procesoModel.procesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+
+</h6>
 
 
 <div class="row">
@@ -83,7 +87,7 @@
                         <th></th>
                         <th colspan=2 style="text-align: center;">Seguridad y Salud Ocupacional</th>
                         <th colspan=2 style="text-align: center;">Medio ambiente</th>
-                        <th colspan=2 style="text-align: center;">Negocio</th>
+                        <th colspan=2 style="text-align: center;">Operacional</th>
                     </tr>
                     <tr>
                         <th class="mdl-data-table__cell--non-numeric" id="estatico">
@@ -137,7 +141,7 @@
                         <th></th>
                         <th colspan=2 style="text-align: center;">Seguridad y Salud Ocupacional</th>
                         <th colspan=2 style="text-align: center;">Medio ambiente</th>
-                        <th colspan=2 style="text-align: center;">Negocio</th>
+                        <th colspan=2 style="text-align: center;">Operacional</th>
                     </tr>
                     <tr>
                         <th class="mdl-data-table__cell--non-numeric" id="estatico">
@@ -156,12 +160,12 @@
 
                         <td class="mdl-data-table__cell--non-numeric">{{item.Id}}</td>
                         <td class="mdl-data-table__cell--non-numeric">{{item.Descripcion}}</td>
-                        <td class="mdl-data-table__cell--non-numeric" id="item.subprocesoRiesgoPuroS">{{item.subprocesoRiesgoPuroS}}</td>
-                        <td class="mdl-data-table__cell--non-numeric" id="item.subprocesoRiesgoResidualS">{{item.subprocesoRiesgoResidualS}}</td>
-                        <td class="mdl-data-table__cell--non-numeric" id="item.subprocesoRiesgoPuroM">{{item.subprocesoRiesgoPuroM}}</td>
-                        <td class="mdl-data-table__cell--non-numeric" id="item.subprocesoRiesgoResidualM">{{item.subprocesoRiesgoResidualM}}</td>
-                        <td class="mdl-data-table__cell--non-numeric" id="item.subprocesoRiesgoPuroN">{{item.subprocesoRiesgoPuroN}}</td>
-                        <td class="mdl-data-table__cell--non-numeric" id="item.subprocesoRiesgoResidualN">{{item.subprocesoRiesgoResidualN}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.subprocesoRiesgoPuroS">{{item.subprocesoRiesgoPuroS}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.subprocesoRiesgoResidualS">{{item.subprocesoRiesgoResidualS}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.subprocesoRiesgoPuroM">{{item.subprocesoRiesgoPuroM}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.subprocesoRiesgoResidualM">{{item.subprocesoRiesgoResidualM}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.subprocesoRiesgoPuroN">{{item.subprocesoRiesgoPuroN}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.subprocesoRiesgoResidualN">{{item.subprocesoRiesgoResidualN}}</td>
                     </tr>
                 </tbody>
             </table>
