--- a/src/app/componentes/rkmain/rkpend/rkpend.component.html
+++ b/src/app/componentes/rkmain/rkpend/rkpend.component.html
@@ -1,31 +1,45 @@
-<h3 *ngIf="complete" mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
+<h4 *ngIf="complete" mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
 
-    {{ data.title }} </h3>
+    {{ data.title }} </h4>
 
-<h3 *ngIf="!complete" mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
+<h4 *ngIf="!complete" mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
+    Items pendientes por Enviar a Validar </h4>
+<!-- <div class="row" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle >
+    <div class="col-xl-12">
+        <div class="box-body">
+            <div class="form-group">
+                <div class="row">
 
-    Items pendientes por Enviar a Validar </h3>
+                    <div class="col-md-2">
+                        <span>Desde</span><input id="fechas" type="date" placeholder="Fecha Desde" [(ngModel)]='FechaDesde' name="FechaDesde" required>
+                    </div>
 
-<div>
+                    <div class="col-md-2">
+                        <span>Hasta</span> <input id="fechas" type="date" placeholder="Fecha Hasta" [(ngModel)]='FechaHasta' name="FechaHasta" required>
+                    </div>
 
-    Fecha Desde<input type="date" placeholder="Fecha Desde" [(ngModel)]='FechaDesde' name="FechaDesde" required> Fecha Hasta<input type="date" placeholder="Fecha Hasta" [(ngModel)]='FechaHasta' name="FechaHasta" required>
+                    <div class="col-md-2">
+                        <br>
+                        <ng-template [ngIf]="FechaDesde ===''|| FechaHasta=== ''" [ngIfElse]="BotonActivado">
 
-    <button *ngIf="FechaDesde ==='' || FechaHasta=== ''; else BotonActivado" (click)='Filtrar()' style="padding-left: 5px; padding-top: 1px;" class="material-icons" disabled>
-                    search</button>
-    <ng-template #BotonActivado>
-        <button (click)='Filtrar()' style="padding-left: 5px; padding-top: 1px;" class="material-icons">
-                            search</button>
-    </ng-template>
-    <br>
-    <br>
-    <mat-slide-toggle (change)="recargar()" [(ngModel)]="complete">Items en Construcción</mat-slide-toggle>
-</div>
+                            <button type="submit" class="button5" disabled><i class="fa fa-search" ></i></button>
+                        </ng-template>
+                        <ng-template #BotonActivado>
 
-<br>
+                            <button type="submit" class="button5" (click)='Filtrar()'><i class="fa fa-search"></i></button>
+                        </ng-template>
+                    </div>
+                </div>
 
-<mat-dialog-content style="padding-left: 0 !important;" cdkDrag cdkDragRootElement=".cdk-overlay-pane">
+            </div>
+            
+            
+        </div>
+    </div>
+</div> -->
+<mat-slide-toggle (change)="recargar()" [(ngModel)]="complete">Items en Construcción</mat-slide-toggle>
 
-
+<mat-dialog-content style="padding-left: 0 !important;">
 
 
     <table class="cebra">
@@ -37,7 +51,7 @@
                 <th class="sticky sticky-top "><input type="checkbox" style="background-color: green !important;" [(ngModel)]="masterSelected" (change)="checkUncheckAll()" /><b id='check'>Todos</b></th>
                 <th class="sticky2 sticky-top"><b>Accion</b></th>
                 <th class="sticky-top"><b>Comentarios</b></th>
-                <th class="sticky-top"><b>Fecha</b><br></th>
+                <th class="sticky-top fecha"><b>Fecha</b><br></th>
                 <th class="sticky-top"><b>Entidad</b>
                 </th>
                 <th class="sticky-top"><b>Descripcion</b></th>
@@ -71,7 +85,7 @@
                 </td>
                 <td class="sticky2">{{item.Accion}}</td>
                 <td>{{item.Comentarios}}</td>
-                <td>{{item.Fecha}}</td>
+                <td class="fecha">{{item.Fecha}}</td>
                 <ng-template [ngIf]="item.Entidad === 'ACTIVIDAD'" [ngIfElse]="Permitido">
 
                     <td style="font-weight: bold; min-width: 220px;">{{item.Entidad}}
@@ -111,7 +125,9 @@
         </tbody>
     </table>
 
+
 </mat-dialog-content>
+<span class="contador">{{totalMarcados}}/{{TotalRegistros}}</span>
 
 <mat-dialog-actions align="end" cdkDragHandle>
     <button mat-raised-button color="warn" (click)="cerrar()">{{ data.button_close }}</button>
