--- a/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
+++ b/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
@@ -1,27 +1,10 @@
-<h3 mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
+<h4 mat-dialog-draggable-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
 
-    {{ data.title }} </h3>
-
-<div>
-
-    Fecha Desde<input type="date" placeholder="Fecha Desde" [(ngModel)]='FechaDesde' name="FechaDesde" required> Fecha Hasta<input type="date" placeholder="Fecha Hasta" [(ngModel)]='FechaHasta' name="FechaHasta" required>
-
-    <button *ngIf="FechaDesde ==='' || FechaHasta=== ''; else BotonActivado" (click)='Filtrar()' style="padding-left: 5px; padding-top: 1px;" class="material-icons" disabled>
-                        search</button>
-    <ng-template #BotonActivado>
-        <button (click)='Filtrar()' style="padding-left: 5px; padding-top: 1px;" class="material-icons">
-                                search</button>
-    </ng-template>
-    <br>
-    <br>
-    <!-- <mat-slide-toggle (change)="recargar()" [(ngModel)]="complete">Items Completados</mat-slide-toggle> -->
-</div>
-
-<br>
-
-<mat-dialog-content style="padding-left: 0 !important;" cdkDrag cdkDragRootElement=".cdk-overlay-pane">
+    {{ data.title }} </h4>
 
 
+
+<mat-dialog-content style="padding-left: 0 !important;">
 
 
     <table class="cebra">
@@ -33,7 +16,7 @@
                 <th class="sticky sticky-top "><input type="checkbox" style="background-color: green !important;" [(ngModel)]="masterSelected" (change)="checkUncheckAll()" /><b id='check'>Todos</b></th>
                 <th class="sticky2 sticky-top"><b>Accion</b></th>
                 <th class="sticky-top"><b>Comentarios</b></th>
-                <th class="sticky-top"><b>Fecha</b><br></th>
+                <th class="sticky-top fecha"><b>Fecha</b><br></th>
                 <th class="sticky-top"><b>Entidad</b>
                 </th>
                 <th class="sticky-top"><b>Descripcion</b></th>
@@ -67,7 +50,7 @@
                 </td>
                 <td class="sticky2">{{item.Accion}}</td>
                 <td>{{item.Comentarios}}</td>
-                <td>{{item.Fecha}}</td>
+                <td class="fecha">{{item.Fecha}}</td>
                 <ng-template [ngIf]="item.Entidad === 'ACTIVIDAD'" [ngIfElse]="Permitido">
 
                     <td style="font-weight: bold; min-width: 220px;">{{item.Entidad}}
@@ -109,18 +92,21 @@
 
 </mat-dialog-content>
 
+<span class="contador">{{totalMarcados}}/{{TotalRegistros}}</span>
+
 <mat-dialog-actions align="end" cdkDragHandle>
+
 
     <button mat-raised-button color="warn" (click)="cerrar()">{{ data.button_close }}</button>
     <ng-template [ngIf]="!complete" [ngIfElse]="incompletos">
 
-        <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="accent" (click)="consola('archivar')">Archivar</button>
+        <!-- <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="accent" (click)="consola('archivar')">Archivar</button> -->
         <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="primary" (click)="consola('restaurar')">Restaurar</button>
     </ng-template>
     <!-- <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion" mat-raised-button color="accent" (click)="consola()">Re</button> -->
     <ng-template #incompletos>
 
-        <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="accent" (click)="consola('archivar')">Archivar</button>
+        <!-- <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="accent" (click)="consola('archivar')">Archivar</button> -->
         <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="primary" (click)="consola('restaurar')">Restaurar</button>
     </ng-template>
 
