--- a/src/app/componentes/rkmain/rkr/rkr.component.html
+++ b/src/app/componentes/rkmain/rkr/rkr.component.html
@@ -1,4 +1,7 @@
-<h6 class="article-title">Area > Proceso > Subproceso > Actividad > Tarea > Dimension > Riesgo</h6>
+<h6 class="article-title">Area > Proceso > Subproceso > Actividad > Tarea > Dimension > Riesgo
+    <button *ngIf="riesgoModel.riesgoStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(riesgoModel.key,riesgoModel.riesgoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+
+</h6>
 
 
 <div class="row">
@@ -144,7 +147,7 @@
                         <th></th>
                         <th colspan=2 style="text-align: center; ">Seguridad y Salud Ocupacional</th>
                         <th colspan=2 style="text-align: center;">Medio ambiente</th>
-                        <th colspan=2 style="text-align: center;">Negocio</th>
+                        <th colspan=2 style="text-align: center;">Operacional</th>
                     </tr>
                     <tr>
                         <th class="mdl-data-table__cell--non-numeric" id="estatico">
@@ -197,7 +200,7 @@
                         <th></th>
                         <th colspan=2 style="text-align: center; ">Seguridad y Salud Ocupacional</th>
                         <th colspan=2 style="text-align: center;">Medio ambiente</th>
-                        <th colspan=2 style="text-align: center;">Negocio</th>
+                        <th colspan=2 style="text-align: center;">Operacional</th>
                     </tr>
                     <tr>
                         <th class="mdl-data-table__cell--non-numeric" id="estatico">
