--- a/src/app/componentes/rkmain/rks/rks.component.html
+++ b/src/app/componentes/rkmain/rks/rks.component.html
@@ -1,5 +1,8 @@
-<h6 class="article-title">Area > Proceso > Subproceso</h6>
+<h6 class="article-title">
+    Area > Proceso > Subproceso
+    <button *ngIf="subprocesoModel.subprocesoStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
 
+</h6>
 
 
 <div class="row">
