--- a/src/app/componentes/rkmain/rkt/rkt.component.html
+++ b/src/app/componentes/rkmain/rkt/rkt.component.html
@@ -1,4 +1,8 @@
-<h6 class="article-title">Area > Proceso > Subproceso > Actividad > Tarea</h6>
+<h6 class="article-title">
+    Area > Proceso > Subproceso > Actividad > Tarea
+    <button *ngIf="tareaModel.tareaStatusId !=='008'" mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(tareaModel.key,tareaModel.tareaStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+
+</h6>
 
 
 <div class="row">
@@ -132,6 +136,8 @@
                             <tr *ngFor="let item of dimensionesList">
                                 <td title="Pendiente Inactivacion (Eliminacion)." *ngIf='item.estado ==="001"  && item.pendingDelete ==="Y" || item.estado ==="002" && item.pendingDelete ==="Y"||item.estado ==="003" && item.pendingDelete ==="Y"|| item.estado ==="006" && item.pendingDelete ==="Y"'
                                     class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (*)</a></td>
+                                <td title="Pendiente Inactivacion (Eliminacion)." *ngIf='item.estado ==="001"  && item.pendingDelete ==="N" || item.estado ==="002" && item.pendingDelete ==="N"||item.estado ==="003" && item.pendingDelete ==="N"|| item.estado ==="006" && item.pendingDelete ==="N"'
+                                    class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (*)</a></td>
                                 <td title="Pendiente Inactivacion (Eliminacion)." *ngIf='item.estado ==="004" && item.pendingDelete ==="Y"' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (**)</a></td>
                                 <td title="Pendiente Inactivacion (Eliminacion)." *ngIf='item.estado ==="007" && item.pendingDelete ==="Y"' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (***)</a></td>
                                 <td *ngIf='item.estado ==="004" && item.pendingDelete ==="N"' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (**)</a></td>
@@ -166,7 +172,7 @@
 
                                 <th class="mdl-data-table__cell--non-numeric" style="width: 30px;">
                                     <div [ngSwitch]="tareaModel.CanAdd">
-                                        <div *ngSwitchCase="false">
+                                        <div *ngSwitchCase="'false'">
 
                                             <button class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()" id="SinPermisos" disabled>
                               <img class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;">
@@ -176,7 +182,7 @@
 
                                             <ng-template [ngIf]="tareaModel.Creador ==='true'" [ngIfElse]='NoPermitido'>
 
-                                                <ng-template [ngIf]="tareaModel.tare ==='001' || tareaModel.tare ==='008'" [ngIfElse]='opcion2'>
+                                                <ng-template [ngIf]="tareaModel.tareaStatusId ==='001' ||tareaModel.tareaStatusId ==='002' ||  tareaModel.tareaStatusId ==='008'" [ngIfElse]='opcion2'>
 
                                                     <button class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()">
                                                         <img class="img-circle" src="assets/images/Add.png" style="width: 10px; height: 10px;">
@@ -223,7 +229,7 @@
                                 <td class="mdl-data-table__cell--non-numeric">
                                     <div [ngSwitch]="tareaModel.CanAdd ">
 
-                                        <div *ngSwitchCase=" true ">
+                                        <div *ngSwitchCase="'true'">
 
                                             <ng-template [ngIf]="tareaModel.Creador ==='true'" [ngIfElse]='NoPermitido'>
 
@@ -344,14 +350,14 @@
                                 <th style="text-align: left; height: 30px;"></th>
 
                                 <th class="mdl-data-table__cell--non-numeric" style="width: 30px;">
-                                    <div [ngSwitch]="canAdd">
-                                        <div *ngSwitchCase="'N'">
+                                    <div [ngSwitch]="tareaModel.CanAdd">
+                                        <div *ngSwitchCase="'false'">
 
                                             <button class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()">
                               <img class="img-circle" src="assets/images/Add_Disabled.png" style="width: 10px; height: 10px;">
                           </button>
                                         </div>
-                                        <div *ngSwitchCase="'Y'">
+                                        <div *ngSwitchCase="'true'">
 
                                             <button class="btn btn-sm btn-light btn-round" (click)="guardarstdjob()">
                               <img class="img-circle" src="assets/images/Add.png" style="width: 10px; height: 10px;">
