--- a/src/app/componentes/rkmain/rkvalidar/rkvalidar.component.scss
+++ b/src/app/componentes/rkmain/rkvalidar/rkvalidar.component.scss
@@ -1,68 +1,3 @@
-// .mdl-data-table th {
-//     position: sticky !important;
-//     vertical-align: bottom;
-//     text-overflow: ellipsis;
-//     font-size: 15px;
-//     font-weight: bold;
-//     line-height: 12px;
-//     letter-spacing: 0;
-//     height: 28px;
-//     color: black;
-//     padding-bottom: 4px;
-//     box-sizing: border-box;
-//     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-// }
-// #SinPermisos {
-//     cursor: not-allowed;
-// }
-// .mdl-data-table tbody tr {
-//     font-size: 10px;
-//     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-//     line-height: 12px;
-//     position: sticky;
-//     height: 28px;
-//     padding-bottom: 4px;
-//     transition-duration: 0.14s;
-//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-//     transition-property: background-color;
-// }
-// .mdl-data-table__cell--non-numeric {
-//     text-align: left !important;
-//     height: 9px !important;
-//     padding: 0px 12px 0px 12px;
-//     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-//     font-size: 11px;
-// }
-// .mat-dialog-container {
-//     -webkit-user-drag: element;
-// }
-// thead th {
-//     position: sticky;
-//     position: -webkit-sticky;
-//     top: 0;
-//     background: white;
-//     z-index: 10;
-//     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-// }
-// table th {
-//     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-//     position: sticky;
-//     top: 0;
-// }
-// h3 {
-//     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-// }
-// a {
-//     color: #2196F3 !important;
-//     font-weight: 500;
-//     cursor: pointer !important;
-// }
-// #check {
-//     font-size: 10px;
-// }
-// #busqueda {
-//     background-color: gray;
-// }
 // .cebra {
 //     border-top: solid 1px #ccc;
 //     border-spacing: 0;
@@ -103,7 +38,12 @@
 
 .cebra .sticky2 {
     position: sticky;
+    min-width: 90px !important;
     left: 60px;
+}
+
+.cebra .fecha {
+    min-width: 120px !important;
 }
 
 .cebra {
@@ -120,7 +60,7 @@
     position: sticky;
     background: #333;
     color: white;
-    left: 210px;
+    left: 150px;
 }
 
 // .cebra thead th {
@@ -130,9 +70,10 @@
 .cebra th,
 .cebra td {
     border-right: solid 1px #ccc;
-    min-width: 150px;
+    min-width: 200px;
     padding: 0.5rem;
     text-align: left;
+    cursor:text;
 }
 
 .cebra th:last-child,
@@ -164,6 +105,216 @@ a {
     cursor: pointer !important;
 }
 
-input:checked .checkmark {
-    background-color: #21F329 !important;
+// input:checked .checkmark {
+//     background-color: #21F329 !important;
+// }
+input:checked~.checkmark {
+    background-color: green;
+}
+
+span:hover {
+    transform: scale(1.5);
+    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+.swal2-icon.swal2-warning {
+    border-color: red !important;
+    color: #f8bb86;
+}
+
+.dates-wrapper {
+    background: #f0f0f0;
+    padding: 1em 1em 0 1em;
+    display: inline-block;
+}
+
+.input-text {
+    background-color: #ffffff;
+    padding: 2px 10px;
+    color: #333;
+    border: 1px solid #dddddd;
+    outline: none;
+    vertical-align: middle;
+    height: 36px;
+    border-radius: 0;
+    display: block;
+    width: 100%;
+    -webkit-appearance: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+}
+
+.date-wrapper {
+    position: relative;
+    margin: 0 42px 10px 0;
+    display: inline-block;
+    .label {
+        float: left;
+        display: inline-block;
+        margin-right: 28px;
+        padding-top: 10px;
+    }
+    .input {
+        font-size: 15px;
+        color: #333;
+        max-width: 172px;
+        float: left;
+        margin-right: 10px;
+        input {
+            float: left;
+            width: 100%;
+            padding: 2px 10px;
+        }
+    }
+    .calendar-btn {
+        display: inline-block;
+        width: 36px;
+        height: 36px;
+        border-radius: 18px;
+        float: left;
+        background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9487/icon-calendar-72x72.png);
+        background-repeat: no-repeat;
+        background-size: 36px 36px;
+    }
+}
+
+.pika-single {
+    position: absolute;
+    top: 40px;
+    left: 0px;
+    .pika-title {
+        color: #444;
+    }
+    .is-selected .pika-button {
+        border-radius: 0;
+        box-shadow: none;
+        background: #ec0000;
+    }
+    .pika-table tbody td {
+        border: 1px solid #b9b9b9;
+    }
+    .pika-button:hover {
+        border-radius: 0 !important;
+        box-shadow: none !important;
+        background: #868686 !important;
+    }
+    .is-today .pika-button {
+        color: #ec0000;
+    }
+    .is-today.is-selected .pika-button {
+        color: #fff;
+    }
+}
+
+.hide-text {
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.group:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.button5 {
+    background-color: #4CAF50;
+    width: 68px;
+    border: none;
+    color: white;
+    padding: 8px 28px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 11px;
+    margin: -10px -4px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+.button5:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.button5:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+#fechas {
+    height: 5px;
+}
+
+input[type="date"] {
+    display: block;
+    position: relative;
+    padding: 1rem 3.5rem 1rem 0.75rem;
+    font-size: 1rem;
+    font-family: monospace;
+    border: 1px solid #8292a2;
+    border-radius: 0.25rem;
+    background: white url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='22' viewBox='0 0 20 22'%3E%3Cg fill='none' fill-rule='evenodd' stroke='%23688EBB' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' transform='translate(1 1)'%3E%3Crect width='18' height='18' y='2' rx='2'/%3E%3Cpath d='M13 0L13 4M5 0L5 4M0 8L18 8'/%3E%3C/g%3E%3C/svg%3E") right 1rem center no-repeat;
+    cursor: pointer;
+}
+
+input[type="date"]:focus {
+    outline: none;
+    border-color: #3acfff;
+    box-shadow: 0 0 0 0.25rem rgba(0, 120, 250, 0.1);
+}
+
+ ::-webkit-datetime-edit {}
+
+ ::-webkit-datetime-edit-fields-wrapper {}
+
+ ::-webkit-datetime-edit-month-field:hover,
+ ::-webkit-datetime-edit-day-field:hover,
+ ::-webkit-datetime-edit-year-field:hover {
+    background: rgba(0, 120, 250, 0.1);
+}
+
+ ::-webkit-datetime-edit-text {
+    opacity: 0;
+}
+
+ ::-webkit-clear-button,
+ ::-webkit-inner-spin-button {
+    display: none;
+}
+
+ ::-webkit-calendar-picker-indicator {
+    position: absolute;
+    width: 2.5rem;
+    // height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    cursor: pointer;
+    color: rgba(0, 120, 250, 1);
+    background: rgba(0, 120, 250, 1);
+}
+
+input[type="date"]:hover::-webkit-calendar-picker-indicator {
+    opacity: 0.05;
+}
+
+input[type="date"]:hover::-webkit-calendar-picker-indicator:hover {
+    opacity: 0.15;
+}
+
+h4 {
+    margin-top: 0px;
+    margin-bottom: 4px;
+}
+
+td textarea {
+    width: 100%;
+    height: 100%
+}
+
+.contador {
+    top: 0;
+    font-size: 20px;
 }
