--- a/src/app/rkmain/rkhelp/rkhelp.component.html
+++ b/src/app/rkmain/rkhelp/rkhelp.component.html
@@ -5,13 +5,13 @@
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                    <span class="nav-link active">Help</span>
+                    <span class="nav-link active">Ayuda</span>
                 </li>
             </ul>
 
         </div>
 
-        <h5> HOW TO USING CUSTOM SCREEN: COEMDR</h5>
+
 
 
     </div>
@@ -24,8 +24,8 @@
                 <tr>
                     <th class="sticky-top"></th>
                     <th class="sticky-top">N°</th>
-                    <th class="sticky-top">Nombre</th>
-                    <th class="sticky-top">Contents Descriptions </th>
+                    <!-- <th class="sticky-top">Nombre</th> -->
+                    <th class="sticky-top">Descripcion </th>
                     <th class="sticky-top">Link</th>
                 </tr>
             </thead>
@@ -36,7 +36,7 @@
                 <tr *ngFor="let item of docsHelp; let indice = index">
                     <td></td>
                     <td>{{ indice+1}}</td>
-                    <td>{{item.DOCUMENT_NO}}</td>
+                    <!-- <td>{{item.DOCUMENT_NO}}</td> -->
                     <td>{{item.DOCUMENT_NAME1}}</td>
                     <td>
                         <a href="{{item.ELEC_REF}}" target="_blank">
